Premier jet pour rendu!

--- a/index.html
+++ b/index.html
@@ -25,46 +25,50 @@
     </header>
     <div class="container-fluid" id="page">
       <aside class="overlay closed" id="left">
-        <div class="overlay col-md-12">
-          <div class="content_design col-md-pull-4 bg-primary overlay">
-            <p>My last projects</p>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project1</h2><img src="#">
-                    <p>Le All Day In débarque pour sa 2ème édition, le dimanche 24 juillet 2016, Plage des Raisins Clairs en Guadeloupe. Les plus grands DJ de la Caraïbe t’y attendent avec en Guest Stars internationales : DJ SNAKE et Kerwin DUBOIS.</p><a href="#">Website</a>
-                  </div>
+        <p>My last projects</p>
+        <div class="projects">
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project1</h2>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project2</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
-                  </div>
+                <div class="pbox_technologies col-md-12 text-center">{html5}</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project2</h2>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project3</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
-                  </div>
+                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project3</h2>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project4</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
-                  </div>
+                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project4</h2>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project5</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
-                  </div>
+                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project5</h2>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project6</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
-                  </div>
+                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
+              <div class="project"><img src="images/index.png">
+                <div class="pbox_title col-md-12 text-center">
+                  <h2>project6</h2>
                 </div>
-          </div>
+                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
+              </div>
         </div>
       </aside>
       <section class="middle col-md-12 text-center" id="center">
@@ -97,41 +101,47 @@
         <div class="overlay col-md-12">
           <div class="content_dev text-right bg-primary overlay closed">
             <p>My last projects</p>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project1</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project1</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project2</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project2</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project3</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project3</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project4</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project4</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project5</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project5</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
-                <div class="row projects">
-                  <div class="project col-md-12">
-                    <h2>project6</h2><img src="#">
-                    <p>mon premier projet</p><a href="#">Website</a>
+                <div class="project"><img src="#">
+                  <div class="pbox_title col-md-12 text-center">
+                    <h2>project6</h2>
                   </div>
+                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
+                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
                 </div>
           </div>
         </div>
