--- a/index.html
+++ b/index.html
@@ -1,151 +1,41 @@
-<!DOCTYPE html>
+
 <html>
   <head>
+    <meta charset="utf-8"/>
+    <meta author="Ronald Marcel"/>
+    <meta language="Fr"/>
     <title>Portfolio</title>
-    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-    <link href="css/style.css" rel="stylesheet">
-    <link href="css/jquery.fullPage.css" rel="stylesheet">
-    <link href="css/ionicons.min.css" rel="stylesheet">
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js" type="text/javascript"></script>
-    <script src="js/jquery.fullPage.min.js" type="text/javascript"></script>
-    <script src="js/script.js" type="text/javascript"></script>
+    <link href="build/css/style.css" rel="stylesheet" type="text/css"/>
+    <link href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
+    <link href="build/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
+    <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two&quot; rel=&quot;stylesheet"/>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Slab&quot; rel=&quot;stylesheet"/>
   </head>
   <body>
-    <header>
-      <nav class="navbar">
-        <div class="container-fluid">
-          <ul class="nav navbar-nav">
-            <li class="text-uppercase"><a href="index.html">home</a></li>
-            <li class="text-uppercase"><a href="about.html">about</a></li>
-            <li class="text-uppercase"><a href="#">skill</a></li>
-            <li class="text-uppercase"><a href="contact.html">contact</a></li>
-          </ul>
-        </div>
-      </nav>
-    </header>
-    <div class="container-fluid" id="page">
-      <aside class="overlay closed" id="left">
-        <p>My last projects</p>
-        <div class="projects">
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project1</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">{html5}</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project2</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project3</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project4</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project5</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-              <div class="project"><img src="images/index.png">
-                <div class="pbox_title col-md-12 text-center">
-                  <h2>project6</h2>
-                </div>
-                <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-              </div>
-        </div>
-      </aside>
-      <section class="middle col-md-12 text-center" id="center">
-        <div class="row">
-          <div class="container-fluid">
-            <div class="info col-md-4 col-md-offset-4">
-              <div class="whoami center-block"></div>
-              <h1 class="title center-block">ronald marcel</h1>
-              <p class="subtitle center-block">Product designer | Front-end developer</p>
-              <p class="descrip col-md-12">Issu des mondes artistique et informatique, le web m'a toujours passionné. J'ai fait des études d'informatiques ainsi que des études de graphisme et de web design / web development. Il est pour moi très important d'allier le métier de Webdesigner à celui de web développeur.Vous pouvez me contacter pour une demande de devis.</p>
-              <div class="socialnetwork col-md-12">
-                <ul class="itemssocial"><a href="#"><i class="icon ion-social-github"></i></a><a href="#"><i class="icon ion-social-twitter"></i></a><a href="#"><i class="icon ion-social-linkedin"></i></a><a href="#"><i class="icon ion-social-googleplus"></i></a></ul>
-              </div>
-            </div><a class="link link_left" href="#" id="click_left"><span>> Design Product <</span></a><a class="link link_next" href="#"><span>> Next <</span></a><a class="link link_right" href="#fullpage"><span>> Development <</span></a>
-          </div>
-        </div>
-      </section>
-      <div id="fullpage">
-        <div class="section aboutme">
-          <Test_1></Test_1>
-        </div>
-        <div class="section skill">
-          <Test_2></Test_2>
-        </div>
-        <div class="section contact">
-          <Test_3></Test_3>
-        </div>
+    <section class="container-fluid" id="home">
+      <div class="intro_me col-lg-3 col-lg-offset-4-5">
+        <h1 class="col-lg-12 text-center">Ronald</br>Marcel</h1>
+        <h3 class="col-lg-12 text-center">Product Designer </br> Developper Front-End</h3>
+        <p class="intro col-lg-12 text-center">Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.</p>
+        <ul class="social col-lg-12">
+          <li class="col-lg-2 col-lg-offset-2 text-center"><a class="icon ion-social-github" href="#"></a></li>
+          <li class="col-lg-2"><a class="icon ion-social-twitter" href="#"></a></li>
+          <li class="col-lg-2"><a class="icon ion-social-linkedin" href="#"></a></li>
+          <li class="col-lg-2"><a class="icon ion-social-googleplus" href="#"></a></li>
+        </ul>
+        <ul class="menu col-lg-12 text-center">
+          <li class="text-capitalize col-lg-12"><a href="#">home</a></li>
+          <li class="text-capitalize col-lg-12"><a href="#about">about me</a></li>
+          <li class="text-capitalize col-lg-12"><a href="#skill">skill</a></li>
+          <li class="text-capitalize col-lg-12"><a href="#contact">contact</a></li>
+        </ul>
       </div>
-      <aside class="row overlay closed" id="right">
-        <div class="overlay col-md-12">
-          <div class="content_dev text-right bg-primary overlay closed">
-            <p>My last projects</p>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project1</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project2</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project3</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project4</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project5</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-                <div class="project"><img src="#">
-                  <div class="pbox_title col-md-12 text-center">
-                    <h2>project6</h2>
-                  </div>
-                  <div class="pbox_technologies col-md-12 text-center">mon premier projet</div>
-                  <div class="pbox_link col-md-12 text-center"><a href="#">Website</a></div>
-                </div>
-          </div>
-        </div>
-      </aside>
-    </div>
+      <div class="intro_bottom col-lg-12">
+        <div class="button coder text-capitalize">coder</div>
+        <div class="button designer text-capitalize">designer</div>
+      </div>
+    </section>
+    <section id="development"></section>
+    <section id="design"></section>
   </body>
 </html>
