--- a/index.html
+++ b/index.html
@@ -10,9 +10,12 @@
     <link href="build/css/ionicons.min.css" rel="stylesheet" type="text/css"/>
     <link href="https://fonts.googleapis.com/css?family=Shadows+Into+Light+Two&quot; rel=&quot;stylesheet"/>
     <link href="https://fonts.googleapis.com/css?family=Josefin+Slab&quot; rel=&quot;stylesheet"/>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.js"></script>
+    <script src="build/js/script.js"></script>
   </head>
   <body>
-    <section class="container-fluid" id="home">
+    <section class="home" id="home">
       <div class="intro_me col-lg-3 col-lg-offset-4-5">
         <h1 class="col-lg-12 text-center">Ronald</br>Marcel</h1>
         <h3 class="col-lg-12 text-center">Product Designer </br> Developper Front-End</h3>
@@ -31,11 +34,87 @@
         </ul>
       </div>
       <div class="intro_bottom col-lg-12">
-        <div class="button coder text-capitalize">coder</div>
-        <div class="button designer text-capitalize">designer</div>
+        <div class="button text-capitalize" id="coder">coder</div>
+        <div class="button text-capitalize" id="designer">designer</div>
       </div>
     </section>
-    <section id="development"></section>
+    <section class="closed" id="development">
+      <div class="row">
+        <div class="navlist">
+          <div class="ul">
+            <div class="li all"></div>
+            <div class="li website"></div>
+            <div class="li app"></div>
+          </div>
+        </div>
+        <div class="gallery col-lg-10 col-lg-offset-1">
+          <div class="box col-lg-3">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box col-lg-3">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box col-lg-3">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box col-lg-3">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+          <div class="box">
+            <div class="title_project">
+              <h4></h4>
+            </div>
+            <div class="details">
+              <p>{html} {css3} {js}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
     <section id="design"></section>
   </body>
 </html>
