tentative de résolution des blocks

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="home" id="home">
-      <div class="intro_me col-lg-3 col-lg-offset-4-5">
+      <div class="intro_me">//.col-lg-3.col-lg-offset-4
         <h1 class="col-lg-12 text-center">Ronald</br>Marcel</h1>
         <h3 class="col-lg-12 text-center">Product Designer </br> Developper Front-End</h3>
         <p class="intro col-lg-12 text-center">Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.</p>
@@ -39,77 +39,101 @@
       </div>
     </section>
     <section class="closed" id="development">
-      <div class="row">
-        <div class="navlist">
-          <div class="ul">
-            <div class="li all"></div>
-            <div class="li website"></div>
-            <div class="li app"></div>
-          </div>
+      <div class="container-fluid">
+        <div class="navlist col-lg-2 col-lg-offset-10">
+          <ul class="nav nav-pills">
+            <li>all</li>
+            <li>website</li>
+            <li>app</li>
+          </ul>
         </div>
         <div class="gallery col-lg-10 col-lg-offset-1">
-          <div class="box col-lg-3">
-            <div class="title_project">
-              <h4></h4>
+          <div class="block col-lg-3">
+            <div class="box box_large col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
-            </div>
-          </div>
-          <div class="box col-lg-3">
-            <div class="title_project">
-              <h4></h4>
-            </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
-            </div>
-          </div>
-          <div class="box col-lg-3">
-            <div class="title_project">
-              <h4></h4>
-            </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
+            <div class="box box_small col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="box col-lg-3">
-            <div class="title_project">
-              <h4></h4>
+          <div class="block col-lg-3">
+            <div class="box box_small col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
-            </div>
-          </div>
-          <div class="box">
-            <div class="title_project">
-              <h4></h4>
-            </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
-            </div>
-          </div>
-          <div class="box">
-            <div class="title_project">
-              <h4></h4>
-            </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
+            <div class="box box_large col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="box">
-            <div class="title_project">
-              <h4></h4>
+          <div class="block col-lg-3">
+            <div class="box box_large col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
+            <div class="box box_small col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
           </div>
-          <div class="box">
-            <div class="title_project">
-              <h4></h4>
+          <div class="block col-lg-3">
+            <div class="box box_small col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
-            <div class="details">
-              <p>{html} {css3} {js}</p>
+            <div class="box box_large col-lg-12 text-center">
+              <div class="caption">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
             </div>
           </div>
         </div>
