fichier générer apartir de pug

--- a/index.html
+++ b/index.html
@@ -51,6 +51,7 @@
           <div class="block col-lg-3">
             <div class="box box_large col-lg-12 text-center">
               <div class="caption">
+                <div class="box_img"><img src="ressources/img/13.jpg"/></div>
                 <div class="title_project col-lg-12">
                   <h4>Projet 1</h4>
                 </div>
