--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </head>
   <body>
     <section class="home" id="home">
-      <div class="intro_me">//.col-lg-3.col-lg-offset-4
+      <div class="intro_me">
         <h1 class="col-lg-12 text-center">Ronald</br>Marcel</h1>
         <h3 class="col-lg-12 text-center">Product Designer </br> Developper Front-End</h3>
         <p class="intro col-lg-12 text-center">Hello! My name is Pierre Nel, and I'm a London-based freelancer. If I'm not freelancing at some of London's finest digital agencies, I'm working remotely on projects for clients all over the world.<br>I have a diverse set of skills, ranging from design, to HTML + CSS + Javascript, all the way to PHP, custom Drupal module development and Linux server administration.</p>
@@ -38,7 +38,7 @@
         <div class="button text-capitalize" id="designer">designer</div>
       </div>
     </section>
-    <section class="closed" id="development">
+    <section class="closed_left" id="development">
       <div class="container-fluid">
         <div class="navlist col-lg-2 col-lg-offset-10">
           <ul class="nav nav-pills">
@@ -49,9 +49,9 @@
         </div>
         <div class="gallery col-lg-10 col-lg-offset-1">
           <div class="block col-lg-3">
-            <div class="box box_large col-lg-12 text-center">
-              <div class="caption">
-                <div class="box_img"><img src="ressources/img/13.jpg"/></div>
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
                 <div class="title_project col-lg-12">
                   <h4>Projet 1</h4>
                 </div>
@@ -60,52 +60,9 @@
                 </div>
               </div>
             </div>
-            <div class="box box_small col-lg-12 text-center">
-              <div class="caption">
-                <div class="title_project col-lg-12">
-                  <h4>Projet 1</h4>
-                </div>
-                <div class="details col-lg-12">
-                  <p>{html} {css3} {js}</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="block col-lg-3">
-            <div class="box box_small col-lg-12 text-center">
-              <div class="caption">
-                <div class="title_project col-lg-12">
-                  <h4>Projet 1</h4>
-                </div>
-                <div class="details col-lg-12">
-                  <p>{html} {css3} {js}</p>
-                </div>
-              </div>
-            </div>
-            <div class="box box_large col-lg-12 text-center">
-              <div class="caption">
-                <div class="title_project col-lg-12">
-                  <h4>Projet</h4>
-                </div>
-                <div class="details col-lg-12">
-                  <p>{html} {css3} {js}</p>
-                </div>
-              </div>
-            </div>
-          </div>
-          <div class="block col-lg-3">
-            <div class="box box_large col-lg-12 text-center">
-              <div class="caption">
-                <div class="title_project col-lg-12">
-                  <h4>Projet 1</h4>
-                </div>
-                <div class="details col-lg-12">
-                  <p>{html} {css3} {js}</p>
-                </div>
-              </div>
-            </div>
-            <div class="box box_small col-lg-12 text-center">
-              <div class="caption">
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
                 <div class="title_project col-lg-12">
                   <h4>Projet 1</h4>
                 </div>
@@ -116,8 +73,9 @@
             </div>
           </div>
           <div class="block col-lg-3">
-            <div class="box box_small col-lg-12 text-center">
-              <div class="caption">
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
                 <div class="title_project col-lg-12">
                   <h4>Projet 1</h4>
                 </div>
@@ -126,8 +84,57 @@
                 </div>
               </div>
             </div>
-            <div class="box box_large col-lg-12 text-center">
-              <div class="caption">
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block col-lg-3">
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block col-lg-3">
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
                 <div class="title_project col-lg-12">
                   <h4>Projet 1</h4>
                 </div>
@@ -140,6 +147,114 @@
         </div>
       </div>
     </section>
-    <section id="design"></section>
+    <section class="closed_right" id="design">
+      <div class="container-fluid">
+        <div class="navlist_right col-lg-2 col-lg-offset-10">
+          <ul class="right nav nav-pills">
+            <li>all</li>
+            <li>website</li>
+            <li>app</li>
+          </ul>
+        </div>
+        <div class="gallery col-lg-10 col-lg-offset-1">
+          <div class="block col-lg-3">
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block col-lg-3">
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block col-lg-3">
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="block col-lg-3">
+            <div class="box box_small col-lg-12">
+              <div class="box_img box_img_small"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+            <div class="box box_large col-lg-12">
+              <div class="box_img box_img_large"><img src="ressources/img/13.jpg"/></div>
+              <div class="desc">
+                <div class="title_project col-lg-12">
+                  <h4>Projet 1</h4>
+                </div>
+                <div class="details col-lg-12">
+                  <p>{html} {css3} {js}</p>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
   </body>
 </html>
